Ignore a lib2to3 deprecation (pending or otherwise) in pre-commit flow

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,10 @@ testpaths = tests
 # pre_commit read_text and open_text: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1455177114
 # imp module and ABCs: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1455183241
 # dpath...pkg_resources: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1457219723
+# unclosed file...plumbum: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1458742412
+# ignore:is still running:subprocess:ResourceWarning:subprocess: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1493072447
+# ignore:BuiltinImporter.module_repr:DeprecationWarning:importlib._bootstrap: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1493542865
+# ignore:lib2to3: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1502112446
 filterwarnings =
     error
     ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning
@@ -23,3 +27,10 @@ filterwarnings =
     ignore:the file is not specified with any extension:UserWarning:papermill.iorw
     ignore:Passing unrecognized arguments to super:DeprecationWarning:traitlets.config.configurable
     ignore:pkg_resources is deprecated as an API:DeprecationWarning:pkg_resources
+    ignore:unclosed file:ResourceWarning:plumbum.commands.base
+    ignore:Passing unrecognized arguments to super:DeprecationWarning:ipywidgets.widgets.widget
+    ignore:`ipykernel.pylab.backend_inline` is deprecated:DeprecationWarning:ipykernel.pylab.backend_inline
+    ignore:subprocess:ResourceWarning:subprocess
+    ignore:BuiltinImporter.module_repr:DeprecationWarning:importlib._bootstrap
+    ignore:lib2to3 package is deprecated and may not be able to parse Python:DeprecationWarning:autopep8
+    ignore:lib2to3 package is deprecated and may not be able to parse Python:DeprecationWarning
