--- a/copier.yml
+++ b/copier.yml
@@ -32,8 +32,7 @@ project_name:
 
 project_email:
   type: str
-  help: The email address that will be associated with this project. If you'd like, type your regular email address before the "+", messages will still come to your inbox but they will have the {{ project_name }} suffix!
-  default: +{{ project_name }}@gmail.com
+  help: The email address associated with this project (e.g. for publishing on PyPI). If omitted, no email will be used.
 
 python_version:
   type: str
