--- a/copier.yml
+++ b/copier.yml
@@ -8,20 +8,24 @@ _envops:
 project_owner_github_username:
   type: "str"
   help: "The GitHub username or organization that will host this project"
+  validator: "{% if not project_owner_github_username %}Invalid input{% endif %}"
 
 github_repo_name:
   type: "str"
   help: "The name of the GitHub repository that will host this project"
+  validator: "{% if not github_repo_name %}Invalid input{% endif %}"
 
 project_name:
   type: "str"
   help: "The name of this project, if different from the repository name"
   default: "{{ github_repo_name }}"
+  validator: "{% if not project_name %}Invalid input{% endif %}"
 
 project_owner_name:
   type: "str"
   help: "The name (or names) for the MIT license, if different from the host user"
   default: "{{ project_owner_github_username }}"
+  validator: "{% if not project_owner_name %}Invalid input{% endif %}"
 
 year_of_project_creation:
   type: "int"
@@ -31,6 +35,7 @@ year_of_project_creation:
 project_description:
   type: "str"
   help: "A brief description for your project. Required, but can easily be changed manually later"
+  validator: "{% if not project_description %}Invalid input{% endif %}"
 
 project_email:
   type: "str"
@@ -40,6 +45,7 @@ python_version:
   type: "str"
   help: "The Python version for this project and the minimum supported version to be specified in `pyproject.toml`"
   default: "3.11"
+  validator: "{% if not '.' in python_version %}Invalid input{% endif %}"
 
 actions_runner:
   type: "str"
