--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,66 +1,23 @@
-# * -------------------------------------------------------------------------------- * #
-# * Changes below should persist in significant template updates.
-
-# * -------------------------------------------------------------------------------- * #
-# * Changes below may be lost in significant template updates.
-
 [tool.ruff]
 fix = true
-select = ["ALL"]
-src = ["src", "tests"]
+select = [ "ALL",]
+src = [ "src", "tests",]
 target-version = "py311"
-extend-exclude = ["template", "typings", ".github", ".tools", ".venv"]
-ignore = [
-    # * ---------------------------------------------------------------------------- * #
-    # * Changes below should persist in significant template updates.
+extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
+ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PLR0913", "PLW2901", "RET", "S301", "TCH", "TRY003", "W2", "B018", "F821", "S101", "T201",]
+unfixable = [ "F601",]
 
-    # * ---------------------------------------------------------------------------- * #
-    # * Changes below may be lost in significant template updates.
+[tool.ruff.pydocstyle]
+convention = "google"
 
-    "ANN",    # Don't require type annotations
-    "ARG005", # Allow unused lambda argument. For consistency across df pipelines.
-    "C408",   # Allow dict calls
-    "COM",    # Allow magic commas and magic missing commas
-    "D10",    # Missing docstrings
-    "D20",    # Don't reformat docstrings in these ways
-    "D213",   # Multi-line docstring summary should start at the second line
-    "DTZ",    # Timezones are important, but only contextually necessary.
-    "EM",     # Don't check for exception message issues
-    "ERA",    # False positives. Don't get rid of commented out code.
-    "FBT",    # Allow boolean "traps"
-    "INP001", # False positives. Checks for packages missing `__init__.py`
-    "ISC",    # False positives. Implicit string concatenation is fine.
-    "PD013",  # Allow `stack` instead of `melt`. They're not a direct swap.
-    "PD901",  # Allow `df` variable name. We are all consenting adults here.
-    "PGH003", # Until black stops wrapping special ignores, let's allow bare
-    "RET",    # Return checks are flaky, Sourcery does fine analysing these paths
-    "TCH",    # Type checking linter doesn't play nicely with pydantic
-    "TRY003", # Allow long exception messages
-]
-unfixable = [
-    # * ---------------------------------------------------------------------------- * #
-    # * Changes below should persist in significant template updates.
-
-    # * ---------------------------------------------------------------------------- * #
-    # * Changes below may be lost in significant template updates.
-
-    "F601", # Don't fix duplicate mapping keys
-]
+[tool.ruff.isort]
+split-on-trailing-comma = false
 
 [tool.ruff.per-file-ignores]
-"tests/**" = [
-    # * ---------------------------------------------------------------------------- * #
-    # * Changes below should persist in significant template updates.
-
-    # * ---------------------------------------------------------------------------- * #
-    # * Changes below may be lost in significant template updates.
-
-    "ARG001", # Allow unused arguments in tests
-    "S101",   # Allow assert in tests
-]
+"tests/**" = [ "ARG001", "S101",]
 
 [tool.ruff.flake8-bugbear]
-extend-immutable-calls = ["typer.Argument", "typer.Option"]
+extend-immutable-calls = [ "typer.Argument", "typer.Option",]
 
 [tool.ruff.pep8-naming]
-classmethod-decorators = ["pydantic.validator"]
+classmethod-decorators = [ "pydantic.validator",]
