--- a/.tools/pyproject.toml
+++ b/.tools/pyproject.toml
@@ -68,6 +68,17 @@ convention = "google"
 # * Changes below may be lost in significant template updates.
 split-on-trailing-comma = false
 
+[tool.ruff.pydocstyle]
+convention = "google"
+
+[tool.ruff.isort]
+# * ---------------------------------------------------------------------------- * #
+# * Changes below should persist in significant template updates.
+
+# * ---------------------------------------------------------------------------- * #
+# * Changes below may be lost in significant template updates.
+split-on-trailing-comma = false
+
 [tool.ruff.per-file-ignores]
 "tests/**" = [
     # * ---------------------------------------------------------------------------- * #
