--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,10 +14,34 @@
     // * -------------------------------------------------------------------------- * //
     // * PROJECT SETUP * //
     {
+      "label": "setup: Compose pyproject.toml",
+      "type": "process",
+      "command": "pwsh",
+      "args": ["-Command", "python .tools/scripts/compose_pyproject.py"],
+      "icon": { "id": "file-symlink-directory" },
+      "problemMatcher": []
+    },
+    {
+      "label": "setup: Re-answer template questions",
+      "type": "process",
+      "command": "pwsh",
+      "args": [".tools/scripts/Update-Template.ps1"],
+      "icon": { "id": "file-symlink-directory" },
+      "problemMatcher": []
+    },
+    {
       "label": "setup: Bump template",
       "type": "process",
       "command": "pwsh",
-      "args": ["-Command", ".tools/scripts/Update-Template.ps1 -Force"],
+      "args": ["-Command", ".tools/scripts/Update-Template.ps1 -Remote -Force"],
+      "icon": { "id": "file-symlink-directory" },
+      "problemMatcher": []
+    },
+    {
+      "label": "setup: Setup project",
+      "type": "process",
+      "command": "pwsh",
+      "args": ["setup.ps1"],
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -55,7 +79,7 @@
       "problemMatcher": []
     },
     {
-      "label": "pre-commit",
+      "label": "pre-commit: all",
       "type": "process",
       "command": "pwsh",
       "args": ["-Command", "pre-commit run --all-files"],
@@ -112,7 +136,15 @@
       "problemMatcher": []
     },
     {
-      "label": "task: snakeviz",
+      "label": "task: profile this file",
+      "type": "process",
+      "command": "pwsh",
+      "args": ["-Command", "python -m cProfile -o .prof ${file}"],
+      "icon": { "id": "graph-line" },
+      "problemMatcher": []
+    },
+    {
+      "label": "task: view profile results with snakeviz",
       "type": "process",
       "command": "pwsh",
       "args": ["-Command", "snakeviz .prof"],
