--- a/pytest.ini
+++ b/pytest.ini
@@ -32,5 +32,5 @@ filterwarnings =
     ignore:`ipykernel.pylab.backend_inline` is deprecated:DeprecationWarning:ipykernel.pylab.backend_inline
     ignore:subprocess:ResourceWarning:subprocess
     ignore:BuiltinImporter.module_repr:DeprecationWarning:importlib._bootstrap
-    ignore:lib2to3 package is deprecated and may not be able to parse Python:DeprecationWarning:autopep8
+    ignore:lib2to3 package is deprecated and may not be able to parse Python:PendingDeprecationWarning
     ignore:lib2to3 package is deprecated and may not be able to parse Python:DeprecationWarning
