--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -19,9 +19,19 @@ jobs:
   build:
     runs-on: "ubuntu-latest"
     steps:
-      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.12"
+      - uses: "actions/checkout@v3"
+      - uses: "actions/setup-python@v4"
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            .tools/requirements/requirements*.txt
+      - name: "Install dependencies."
+        run: |-
+          python -m pip install --upgrade pip
+          pip install --upgrade setuptools wheel
+          pip install --requirement .tools/requirements/requirements_ci.txt
       - run: "python -m sphinx -T -E docs _site"
       - uses: "actions/upload-pages-artifact@v1"
   deploy:
