--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -131,7 +131,10 @@
       "label": "task: sphinx-autobuild docs (preview)",
       "type": "process",
       "command": "pwsh",
-      "args": ["-Command", "sphinx-autobuild docs _site"],
+      "args": [
+        "-Command",
+        "sphinx-autobuild docs _site --watch README.md --watch CHANGELOG.md"
+      ],
       "icon": { "id": "book" },
       "problemMatcher": []
     },
