--- a/template/.tools/requirements/requirements_both.txt
+++ b/template/.tools/requirements/requirements_both.txt
@@ -14,8 +14,9 @@ flit==3.8.0
 # Type checking
 pyright==1.1.296
 
-# Lint
-ruff==0.0.260
+# Pre-commit common requirements
+black==23.3.0
+ruff==0.0.263
 
 # Test
 pytest==7.3.1
