--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,6 +90,27 @@
     // * -------------------------------------------------------------------------- * //
     // * GIT * //
     {
+      "label": "git: Push with tags",
+      "type": "process",
+      "command": "pwsh",
+      "args": ["-Command", "git push; git push --tags"],
+      "icon": { "id": "git-branch" },
+      "problemMatcher": []
+    },
+    {
+      "label": "git: Prepare to release new version",
+      "dependsOrder": "sequence",
+      "dependsOn": ["setup: Compose pyproject.toml", "git: Stage all files"],
+      "type": "process",
+      "command": "pwsh",
+      "args": [
+        "-Command",
+        "git commit -m 'Release ${input:version}'; git tag ${input:version}"
+      ],
+      "icon": { "id": "git-branch" },
+      "problemMatcher": []
+    },
+    {
       "label": "git: Rebase back to fork",
       "type": "process",
       "command": "pwsh",
