--- a/template/.tools/requirements/requirements_both.txt
+++ b/template/.tools/requirements/requirements_both.txt
@@ -12,15 +12,19 @@ toml==0.10.2
 flit==3.8.0
 
 # Type checking
-pyright==1.1.296
+pyright
 
 # Pre-commit common requirements
 black==23.3.0
 ruff==0.0.263
 
-# Test
+# Testing
 pytest==7.3.1
+# Testing plugins
 pytest-cov==4.0.0
+pytest-custom-exit-code==0.3.0
+# Format AND test notebooks
+nbqa==1.7.0
 
 # Document
 -r requirements_docs.txt
