Change tasks invocation

--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -4,6 +4,20 @@
 
 {
   "version": "2.0.0",
+  "inputs": [
+    // * -------------------------------------------------------------------------- * //
+    // * Changes below should persist in significant template updates.
+
+    // * -------------------------------------------------------------------------- * //
+    // * Changes below may be lost in significant template updates.
+
+    {
+      "id": "templateOptions",
+      "description": "Template options.",
+      "type": "pickString",
+      "options": ["", "-Defaults", "-Recopy", "-Recopy -Defaults"]
+    }
+  ],
   "tasks": [
     // * -------------------------------------------------------------------------- * //
     // * Changes below should persist in significant template updates.
@@ -15,55 +29,33 @@
     // * PROJECT SETUP * //
     {
       "label": "setup: Compose pyproject.toml",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "python .tools/scripts/compose_pyproject.py"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "python .tools/scripts/compose_pyproject.py",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
-      "label": "setup: Update from template, prompt for responses",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", ".tools/scripts/Copy-Template.ps1 -Update"],
-      "icon": { "id": "file-symlink-directory" },
-      "problemMatcher": []
-    },
-    {
-      "label": "setup: Recopy from template",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        ".tools/scripts/Copy-Template.ps1 -Recopy -Defaults"
-      ],
-      "icon": { "id": "file-symlink-directory" },
-      "problemMatcher": []
-    },
-    {
-      "label": "setup: Update from template",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        ".tools/scripts/Copy-Template.ps1 -Update -Defaults"
-      ],
+      "label": "setup: Copy template",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": ".tools/scripts/Copy-Template.ps1 ${input:templateOptions}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
       "label": "setup: Setup project",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["setup.ps1"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "setup.ps1",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
       "label": "setup: Update project",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["update.ps1"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "update.ps1",
       "icon": { "id": "file-symlink-directory" },
       // "runOptions": {
       //   "runOn": "folderOpen"
@@ -72,20 +64,17 @@
     },
     {
       "label": "setup: Perform first-time setup",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["first_time_setup.ps1"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "first_time_setup.ps1",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
       "label": "setup: Remove *.rej",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "Get-ChildItem -Recurse -Filter *.rej | Remove-Item"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "Get-ChildItem -Recurse -Filter *.rej | Remove-Item",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -94,17 +83,17 @@
     // * PRE-COMMIT * //
     {
       "label": "pre-commit",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "pre-commit"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "pre-commit",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
     {
       "label": "pre-commit: all",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "pre-commit run --all-files"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "pre-commit run --all-files",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
@@ -113,9 +102,9 @@
     // * GIT * //
     {
       "label": "git: Push with tags",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git push; git push --tags"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git push; git push --tags",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
@@ -123,20 +112,17 @@
       "label": "git: Prepare to release new version",
       "dependsOrder": "sequence",
       "dependsOn": ["setup: Compose pyproject.toml", "git: Stage all files"],
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "git commit -m 'Release ${input:version}'; git tag ${input:version}"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git commit -m 'Release ${input:version}'; git tag ${input:version}",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
     {
       "label": "git: Push with tags",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git push; git push --tags"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git push; git push --tags",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
@@ -144,28 +130,25 @@
       "label": "git: Prepare to release new version",
       "dependsOrder": "sequence",
       "dependsOn": ["setup: Compose pyproject.toml", "git: Stage all files"],
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "git commit -m 'Release ${input:version}'; git tag ${input:version}"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git commit -m 'Release ${input:version}'; git tag ${input:version}",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
     {
       "label": "git: Rebase back to fork",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git rebase -i --fork-point main"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git rebase -i --fork-point main",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
     {
       "label": "git: Stage all files",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git add --all"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git add --all",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
@@ -174,17 +157,17 @@
     // * BLACK * //
     {
       "label": "black: Ignore magic comma in this file",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "black -C ${file}"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "black -C ${file}",
       "icon": { "id": "code" },
       "problemMatcher": []
     },
     {
       "label": "black: Ignore magic comma in all project files",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "black -C src tests"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "black -C src tests",
       "icon": { "id": "code" },
       "problemMatcher": []
     },
@@ -196,74 +179,64 @@
       "dependsOrder": "sequence",
       "dependsOn": ["task: format notebook"],
       "type": "shell",
-      "options": {
-        "shell": { "executable": "pwsh", "args": ["-Command"] }
-      },
-      "command": "nb-clean clean --remove-empty-cells --preserve-cell-metadata tags slideshow special -- ${file}",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "nb-clean clean --remove-empty-cells --preserve-cell-metadata special tags -- ${file}",
       "icon": { "id": "notebook" },
       "problemMatcher": []
     },
     {
       "label": "task: format notebook",
       "type": "shell",
-      "options": {
-        "shell": { "executable": "pwsh", "args": ["-Command"] }
-      },
-      "command": "nbqa black ${file}; nbqa ruff --fix-only ${file}; nb-clean clean --remove-empty-cells --preserve-cell-outputs --preserve-cell-metadata tags slideshow special -- ${file}",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "nbqa black ${file}; nbqa ruff --fix-only ${file}; nb-clean clean --remove-empty-cells --preserve-cell-outputs --preserve-cell-metadata tags special -- ${file}",
       "icon": { "id": "notebook" },
       "problemMatcher": []
     },
     {
       "label": "task: Run pytest with coverage",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "pytest --cov --cov-report xml"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "pytest --cov --cov-report xml",
       "icon": { "id": "type-hierarchy-sub" },
       "problemMatcher": []
     },
     {
       "label": "task: Invoke pyright",
-      "type": "process",
-      "command": "pwsh",
-      "args": [".tools/scripts/Invoke-Pyright.ps1"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": ".tools/scripts/Invoke-Pyright.ps1",
       "icon": { "id": "type-hierarchy-sub" },
       "problemMatcher": []
     },
     {
       "label": "task: sphinx-autobuild docs (preview)",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "sphinx-autobuild docs _site --watch README.md --watch CHANGELOG.md"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "sphinx-autobuild -n docs _site --watch README.md --watch CHANGELOG.md",
       "icon": { "id": "book" },
       "problemMatcher": []
     },
     {
       "label": "task: profile this file",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "python -m cProfile -o .prof ${file}"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "python -m cProfile -o .prof ${file}",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     },
     {
       "label": "task: view profile results with snakeviz",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "snakeviz .prof"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "snakeviz .prof",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     },
     {
       "label": "task: autoflake current file",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "autoflake -i --remove-all-unused-imports --ignore-init-module-imports ${file}"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "autoflake -i --remove-all-unused-imports --ignore-init-module-imports ${file}",
       "icon": { "id": "code" },
       "problemMatcher": []
     }
