Update pre-commit config

--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -22,7 +22,6 @@ repos:
 
       - id: "compose-pyproject"
         name: "compose-pyproject"
-        fail_fast: true
         pass_filenames: false
         language: "system"
         entry: "pwsh -Command python .tools/scripts/compose_pyproject.py"
@@ -34,7 +33,6 @@ repos:
           )$
       - id: "pyright"
         name: "pyright"
-        fail_fast: true
         pass_filenames: false
         language: "system"
         entry: "pwsh .tools/scripts/Invoke-Pyright.ps1"
@@ -51,7 +49,6 @@ repos:
           )$
       - id: "pytest-fast-only"
         name: "pytest-fast-only"
-        fail_fast: true
         verbose: true
         pass_filenames: false
         language: "system"
@@ -68,11 +65,11 @@ repos:
           )$
       - id: "pytest-slow-only"
         name: "pytest-slow-only"
-        fail_fast: true
         verbose: true
         pass_filenames: false
         language: "system"
-        entry: "pwsh -Command pytest -m slow"
+        entry: |
+          pwsh -Command "pytest -m 'slow' --suppress-no-test-exit-code"
         files: |
           (?x)^(
             src/.*
